tests/test_arithmetic/bad/output/division_by_zero.catala_en.Money.Interpret
[ERROR] division by zero at runtime

The division operator:
  --> test_arithmetic/bad/division_by_zero.catala_en
   | 
30 |   definition i equals $10.0 /$ $0.0
   |                             ^^
   + `Division_by_zero` exception management
   +-+ with money

The null denominator:
  --> test_arithmetic/bad/division_by_zero.catala_en
   | 
30 |   definition i equals $10.0 /$ $0.0
   |                                ^^^^
   + `Division_by_zero` exception management
   +-+ with money
